--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>freeCodeCamp Survey Form</title>
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       background-attachment: fixed;
